// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic dropdown should match snapshot 1`] = `
.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c5:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c5::-webkit-inner-spin-button {
  height: auto;
}

.c5::-webkit-outer-spin-button {
  height: auto;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: list-item;
}

.c10::before,
.c10::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  list-style-type: decimal;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  padding-left: 40px;
}

.c8::before,
.c8::after {
  box-sizing: border-box;
}

.c3.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c3.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c9 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  list-style-type: none;
  box-sizing: content-box;
  max-height: 265px;
  background-color: hsl(0,0%,100%);
  border-width: 0 1px 1px 1px;
  border-style: solid;
  border-color: hsl(201,7%,58%);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  margin: 0;
  padding: 4px 0 0 0;
  display: block;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.c9:focus {
  outline: none;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c7.fi-status-text {
  display: block;
}

.c7.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,43%);
}

.c7.fi-status-text .fi-icon {
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c1 {
  width: 290px;
}

.c1 .fi-label,
.c1 .fi-hint-text,
.c1 .fi-status-text {
  margin: 0;
}

.c1 .fi-dropdown_item-list {
  padding-top: 0;
}

.c1.fi-dropdown {
  display: inline-block;
}

.c1.fi-dropdown .fi-dropdown_label--visible {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-status-text {
  line-height: 1.1rem;
}

.c1.fi-dropdown .fi-status-text.fi-dropdown_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-dropdown .fi-dropdown_button {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  min-width: 245px;
  max-width: 100%;
  padding: 8px 16px;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  position: relative;
  display: inline-block;
  word-break: break-word;
  width: 100%;
  overflow-wrap: break-word;
  height: 40px;
  padding: 7px 38px 7px 7px;
  border-color: hsl(201,7%,58%);
  text-align: left;
  line-height: 1.5;
  background-color: hsl(0,0%,100%);
  box-shadow: 0 1px 2px 0 hsla(214,100%,24%,0.1) inset;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c1.fi-dropdown .fi-dropdown_button:focus-visible {
  outline: none;
}

.c1.fi-dropdown .fi-dropdown_button:before {
  content: '';
  position: absolute;
  top: 50%;
  right: 16px;
  margin-top: -3px;
  border-style: solid;
  border-color: hsl(0,0%,13%) transparent transparent transparent;
  border-width: 6px 4px 0 4px;
}

.c1.fi-dropdown .fi-dropdown_button[aria-expanded='true']:before {
  border-color: transparent transparent hsl(0,0%,13%) transparent;
  border-width: 0 4px 6px 4px;
}

.c1.fi-dropdown .fi-dropdown_display-value {
  width: 100%;
  height: 100%;
  display: inline-block;
  line-height: 1.5;
  overflow: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-top: -1px;
  padding: 0;
  box-sizing: border-box;
  font-size: 100%;
  border: 0;
  background-color: hsl(0,0%,100%);
  border-color: hsl(201,7%,58%);
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0px 0px 2px 2px;
  max-height: 265px;
  overflow-y: auto;
  overflow-x: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover:focus-within {
  outline: 0;
  box-shadow: none;
}

.c1.fi-dropdown--full-width {
  width: 100%;
}

.c1.fi-dropdown--open .fi-dropdown_button {
  border-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  padding-bottom: 8px;
}

.c1.fi-dropdown--error .fi-dropdown_button {
  border-color: hsl(3,59%,43%);
  border-width: 2px;
}

.c1.fi-dropdown--italicize .fi-dropdown_button {
  font-style: italic;
  color: hsl(201,7%,46%);
  opacity: 1;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper {
  cursor: not-allowed;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button {
  background-color: hsl(202,7%,97%);
  color: hsl(202,7%,67%);
  opacity: 1;
  pointer-events: none;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button:before {
  border-color: hsl(202,7%,67%) transparent transparent transparent;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus {
  outline: 3px solid transparent;
  position: relative;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c11.fi-dropdown_item {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  line-height: 1.5;
  padding: 8px;
  border: 0;
  position: relative;
}

.c11.fi-dropdown_item:focus {
  outline: 0;
}

.c11.fi-dropdown_item:hover {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item .fi-dropdown_item_icon {
  position: absolute;
  top: 14px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c11.fi-dropdown_item--selected {
  background-color: hsl(215,100%,95%);
  color: hsl(0,0%,13%);
}

.c11.fi-dropdown_item--hasKeyboardFocus {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item--noSelectedStyles.fi-dropdown_item--selected {
  background-color: hsl(0,0%,100%);
  color: hsl(0,0%,13%);
}

.c11.fi-dropdown_item--noSelectedStyles.fi-dropdown_item--selected.fi-dropdown_item--hasKeyboardFocus {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item--disabled {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c11.fi-dropdown_item--disabled:hover {
  color: hsl(202,7%,67%);
}

@media (forced-colors:active) {
  .c11.fi-dropdown_item--hasKeyboardFocus,
  .c11.fi-dropdown_item:hover {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 c1 dropdown-test fi-dropdown fi-dropdown--open fi-dropdown--italicize"
      id="test-id"
    >
      <div
        class="c2 c3 fi-dropdown_label--visible fi-label"
      >
        <label
          class="c4 fi-label_label-span"
          id="test-id-label"
        >
          Dropdown test
        </label>
      </div>
      <div
        class="c0 fi-dropdown_input-wrapper"
      >
        <button
          aria-controls="test-id-popover"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="test-id-displayValue test-id-label"
          class="c5 fi-dropdown_button"
          id="test-id_button"
          tabindex="0"
          type="button"
        >
          <span
            class="c4 fi-dropdown_display-value"
            id="test-id-displayValue"
          >
            Dropdown
          </span>
          <input
            class="c6"
            name="dropdown-test"
            tabindex="-1"
            type="hidden"
            value=""
          />
        </button>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c4 c7 fi-status-text"
        />
      </div>
    </div>
  </div>
  <div
    class="fi-portal"
    role="presentation"
    style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <div
      class="c2"
    >
      <ul
        aria-activedescendant="test-id-item-1"
        class="c8 fi-select-item-list c9 fi-dropdown_item-list"
        id="test-id-popover"
        role="listbox"
        tabindex="0"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c10 c11 fi-dropdown_item fi-dropdown_item--hasKeyboardFocus"
          id="test-id-item-1"
          role="option"
          tabindex="0"
        >
          Item 1
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c10 c11 fi-dropdown_item"
          id="test-id-item-2"
          role="option"
          tabindex="-1"
        >
          Item 2
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`Controlled Dropdown should match snapshot 1`] = `
.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c5:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c5::-webkit-inner-spin-button {
  height: auto;
}

.c5::-webkit-outer-spin-button {
  height: auto;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: list-item;
}

.c10::before,
.c10::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  list-style-type: decimal;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  padding-left: 40px;
}

.c8::before,
.c8::after {
  box-sizing: border-box;
}

.c3.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c3.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c9 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  list-style-type: none;
  box-sizing: content-box;
  max-height: 265px;
  background-color: hsl(0,0%,100%);
  border-width: 0 1px 1px 1px;
  border-style: solid;
  border-color: hsl(201,7%,58%);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  margin: 0;
  padding: 4px 0 0 0;
  display: block;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.c9:focus {
  outline: none;
}

.c12 {
  vertical-align: baseline;
}

.c12.fi-icon {
  display: inline-block;
}

.c12 .fi-icon-base-fill {
  fill: currentColor;
}

.c12 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c12.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c12.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c7.fi-status-text {
  display: block;
}

.c7.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,43%);
}

.c7.fi-status-text .fi-icon {
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c1 {
  width: 290px;
}

.c1 .fi-label,
.c1 .fi-hint-text,
.c1 .fi-status-text {
  margin: 0;
}

.c1 .fi-dropdown_item-list {
  padding-top: 0;
}

.c1.fi-dropdown {
  display: inline-block;
}

.c1.fi-dropdown .fi-dropdown_label--visible {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-status-text {
  line-height: 1.1rem;
}

.c1.fi-dropdown .fi-status-text.fi-dropdown_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-dropdown .fi-dropdown_button {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  min-width: 245px;
  max-width: 100%;
  padding: 8px 16px;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  position: relative;
  display: inline-block;
  word-break: break-word;
  width: 100%;
  overflow-wrap: break-word;
  height: 40px;
  padding: 7px 38px 7px 7px;
  border-color: hsl(201,7%,58%);
  text-align: left;
  line-height: 1.5;
  background-color: hsl(0,0%,100%);
  box-shadow: 0 1px 2px 0 hsla(214,100%,24%,0.1) inset;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c1.fi-dropdown .fi-dropdown_button:focus-visible {
  outline: none;
}

.c1.fi-dropdown .fi-dropdown_button:before {
  content: '';
  position: absolute;
  top: 50%;
  right: 16px;
  margin-top: -3px;
  border-style: solid;
  border-color: hsl(0,0%,13%) transparent transparent transparent;
  border-width: 6px 4px 0 4px;
}

.c1.fi-dropdown .fi-dropdown_button[aria-expanded='true']:before {
  border-color: transparent transparent hsl(0,0%,13%) transparent;
  border-width: 0 4px 6px 4px;
}

.c1.fi-dropdown .fi-dropdown_display-value {
  width: 100%;
  height: 100%;
  display: inline-block;
  line-height: 1.5;
  overflow: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-top: -1px;
  padding: 0;
  box-sizing: border-box;
  font-size: 100%;
  border: 0;
  background-color: hsl(0,0%,100%);
  border-color: hsl(201,7%,58%);
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0px 0px 2px 2px;
  max-height: 265px;
  overflow-y: auto;
  overflow-x: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover:focus-within {
  outline: 0;
  box-shadow: none;
}

.c1.fi-dropdown--full-width {
  width: 100%;
}

.c1.fi-dropdown--open .fi-dropdown_button {
  border-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  padding-bottom: 8px;
}

.c1.fi-dropdown--error .fi-dropdown_button {
  border-color: hsl(3,59%,43%);
  border-width: 2px;
}

.c1.fi-dropdown--italicize .fi-dropdown_button {
  font-style: italic;
  color: hsl(201,7%,46%);
  opacity: 1;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper {
  cursor: not-allowed;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button {
  background-color: hsl(202,7%,97%);
  color: hsl(202,7%,67%);
  opacity: 1;
  pointer-events: none;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button:before {
  border-color: hsl(202,7%,67%) transparent transparent transparent;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus {
  outline: 3px solid transparent;
  position: relative;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c11.fi-dropdown_item {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  line-height: 1.5;
  padding: 8px;
  border: 0;
  position: relative;
}

.c11.fi-dropdown_item:focus {
  outline: 0;
}

.c11.fi-dropdown_item:hover {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item .fi-dropdown_item_icon {
  position: absolute;
  top: 14px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c11.fi-dropdown_item--selected {
  background-color: hsl(215,100%,95%);
  color: hsl(0,0%,13%);
}

.c11.fi-dropdown_item--hasKeyboardFocus {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item--noSelectedStyles.fi-dropdown_item--selected {
  background-color: hsl(0,0%,100%);
  color: hsl(0,0%,13%);
}

.c11.fi-dropdown_item--noSelectedStyles.fi-dropdown_item--selected.fi-dropdown_item--hasKeyboardFocus {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item--disabled {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c11.fi-dropdown_item--disabled:hover {
  color: hsl(202,7%,67%);
}

@media (forced-colors:active) {
  .c11.fi-dropdown_item--hasKeyboardFocus,
  .c11.fi-dropdown_item:hover {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 c1 dropdown-test fi-dropdown fi-dropdown--open"
      id="test-id"
    >
      <div
        class="c2 c3 fi-dropdown_label--visible fi-label"
      >
        <label
          class="c4 fi-label_label-span"
          id="test-id-label"
        >
          Dropdown test
        </label>
      </div>
      <div
        class="c0 fi-dropdown_input-wrapper"
      >
        <button
          aria-controls="test-id-popover"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="test-id-displayValue test-id-label"
          class="c5 fi-dropdown_button"
          id="test-id_button"
          tabindex="0"
          type="button"
          value="item-2"
        >
          <span
            class="c4 fi-dropdown_display-value"
            id="test-id-displayValue"
          >
            Item 2
          </span>
          <input
            class="c6"
            name="dropdown-test"
            tabindex="-1"
            type="hidden"
            value="item-2"
          />
        </button>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c4 c7 fi-status-text"
        />
      </div>
    </div>
  </div>
  <div
    class="fi-portal"
    role="presentation"
    style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <div
      class="c2"
    >
      <ul
        aria-activedescendant="test-id-item-2"
        class="c8 fi-select-item-list c9 fi-dropdown_item-list"
        id="test-id-popover"
        role="listbox"
        tabindex="0"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c10 c11 fi-dropdown_item"
          id="test-id-item-1"
          role="option"
          tabindex="-1"
        >
          Item 1
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="c10 c11 fi-dropdown_item fi-dropdown_item--hasKeyboardFocus fi-dropdown_item--selected"
          id="test-id-item-2"
          role="option"
          tabindex="0"
        >
          Item 2
          <svg
            aria-hidden="true"
            class="fi-icon c12 fi-dropdown_item_icon"
            focusable="false"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M19.447 5.384 8 17.42a1.82 1.82 0 0 1-2.667 0L.552 12.394a2.059 2.059 0 0 1 0-2.805 1.822 1.822 0 0 1 2.666 0l3.449 3.625L16.78 2.581a1.82 1.82 0 0 1 2.666 0 2.053 2.053 0 0 1 0 2.803"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`Dropdown with additional aria-label should match snapshot 1`] = `
.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c5:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c5::-webkit-inner-spin-button {
  height: auto;
}

.c5::-webkit-outer-spin-button {
  height: auto;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: list-item;
}

.c10::before,
.c10::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4::before,
.c4::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  list-style-type: decimal;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  padding-left: 40px;
}

.c8::before,
.c8::after {
  box-sizing: border-box;
}

.c3.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c3.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c9 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  list-style-type: none;
  box-sizing: content-box;
  max-height: 265px;
  background-color: hsl(0,0%,100%);
  border-width: 0 1px 1px 1px;
  border-style: solid;
  border-color: hsl(201,7%,58%);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  margin: 0;
  padding: 4px 0 0 0;
  display: block;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.c9:focus {
  outline: none;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c7.fi-status-text {
  display: block;
}

.c7.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,43%);
}

.c7.fi-status-text .fi-icon {
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c1 {
  width: 290px;
}

.c1 .fi-label,
.c1 .fi-hint-text,
.c1 .fi-status-text {
  margin: 0;
}

.c1 .fi-dropdown_item-list {
  padding-top: 0;
}

.c1.fi-dropdown {
  display: inline-block;
}

.c1.fi-dropdown .fi-dropdown_label--visible {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-status-text {
  line-height: 1.1rem;
}

.c1.fi-dropdown .fi-status-text.fi-dropdown_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-dropdown .fi-dropdown_button {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  min-width: 245px;
  max-width: 100%;
  padding: 8px 16px;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  position: relative;
  display: inline-block;
  word-break: break-word;
  width: 100%;
  overflow-wrap: break-word;
  height: 40px;
  padding: 7px 38px 7px 7px;
  border-color: hsl(201,7%,58%);
  text-align: left;
  line-height: 1.5;
  background-color: hsl(0,0%,100%);
  box-shadow: 0 1px 2px 0 hsla(214,100%,24%,0.1) inset;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c1.fi-dropdown .fi-dropdown_button:focus-visible {
  outline: none;
}

.c1.fi-dropdown .fi-dropdown_button:before {
  content: '';
  position: absolute;
  top: 50%;
  right: 16px;
  margin-top: -3px;
  border-style: solid;
  border-color: hsl(0,0%,13%) transparent transparent transparent;
  border-width: 6px 4px 0 4px;
}

.c1.fi-dropdown .fi-dropdown_button[aria-expanded='true']:before {
  border-color: transparent transparent hsl(0,0%,13%) transparent;
  border-width: 0 4px 6px 4px;
}

.c1.fi-dropdown .fi-dropdown_display-value {
  width: 100%;
  height: 100%;
  display: inline-block;
  line-height: 1.5;
  overflow: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-top: -1px;
  padding: 0;
  box-sizing: border-box;
  font-size: 100%;
  border: 0;
  background-color: hsl(0,0%,100%);
  border-color: hsl(201,7%,58%);
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0px 0px 2px 2px;
  max-height: 265px;
  overflow-y: auto;
  overflow-x: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover:focus-within {
  outline: 0;
  box-shadow: none;
}

.c1.fi-dropdown--full-width {
  width: 100%;
}

.c1.fi-dropdown--open .fi-dropdown_button {
  border-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  padding-bottom: 8px;
}

.c1.fi-dropdown--error .fi-dropdown_button {
  border-color: hsl(3,59%,43%);
  border-width: 2px;
}

.c1.fi-dropdown--italicize .fi-dropdown_button {
  font-style: italic;
  color: hsl(201,7%,46%);
  opacity: 1;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper {
  cursor: not-allowed;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button {
  background-color: hsl(202,7%,97%);
  color: hsl(202,7%,67%);
  opacity: 1;
  pointer-events: none;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button:before {
  border-color: hsl(202,7%,67%) transparent transparent transparent;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus {
  outline: 3px solid transparent;
  position: relative;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c11.fi-dropdown_item {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  line-height: 1.5;
  padding: 8px;
  border: 0;
  position: relative;
}

.c11.fi-dropdown_item:focus {
  outline: 0;
}

.c11.fi-dropdown_item:hover {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item .fi-dropdown_item_icon {
  position: absolute;
  top: 14px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c11.fi-dropdown_item--selected {
  background-color: hsl(215,100%,95%);
  color: hsl(0,0%,13%);
}

.c11.fi-dropdown_item--hasKeyboardFocus {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item--noSelectedStyles.fi-dropdown_item--selected {
  background-color: hsl(0,0%,100%);
  color: hsl(0,0%,13%);
}

.c11.fi-dropdown_item--noSelectedStyles.fi-dropdown_item--selected.fi-dropdown_item--hasKeyboardFocus {
  background-color: hsl(212,63%,45%);
  color: hsl(0,0%,100%);
}

.c11.fi-dropdown_item--disabled {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c11.fi-dropdown_item--disabled:hover {
  color: hsl(202,7%,67%);
}

@media (forced-colors:active) {
  .c11.fi-dropdown_item--hasKeyboardFocus,
  .c11.fi-dropdown_item:hover {
    background-color: Highlight;
  }
}

<body>
  <div>
    <div
      class="c0 c1 dropdown-test fi-dropdown fi-dropdown--open fi-dropdown--italicize"
      id="test-id"
    >
      <div
        class="c2 c3 fi-dropdown_label--visible fi-label"
      >
        <label
          class="c4 fi-label_label-span"
          id="test-id-label"
        >
          Dropdown test
        </label>
      </div>
      <div
        class="c0 fi-dropdown_input-wrapper"
      >
        <button
          aria-controls="test-id-popover"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="test-id-displayValue additional-label-id test-id-label"
          class="c5 fi-dropdown_button"
          id="test-id_button"
          tabindex="0"
          type="button"
        >
          <span
            class="c4 fi-dropdown_display-value"
            id="test-id-displayValue"
          >
            Dropdown
          </span>
          <input
            class="c6"
            name="dropdown-test"
            tabindex="-1"
            type="hidden"
            value=""
          />
        </button>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c4 c7 fi-status-text"
        />
      </div>
    </div>
  </div>
  <div
    class="fi-portal"
    role="presentation"
    style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <div
      class="c2"
    >
      <ul
        aria-activedescendant="test-id-item-1"
        class="c8 fi-select-item-list c9 fi-dropdown_item-list"
        id="test-id-popover"
        role="listbox"
        tabindex="0"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c10 c11 fi-dropdown_item fi-dropdown_item--hasKeyboardFocus"
          id="test-id-item-1"
          role="option"
          tabindex="0"
        >
          Item 1
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c10 c11 fi-dropdown_item"
          id="test-id-item-2"
          role="option"
          tabindex="-1"
        >
          Item 2
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`Dropdown with hidden label should match snapshot 1`] = `
.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c5:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c5::-webkit-inner-spin-button {
  height: auto;
}

.c5::-webkit-outer-spin-button {
  height: auto;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c7 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c7::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c7::before,
.c7::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c3.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c3.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c3.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c8 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c8.fi-status-text {
  display: block;
}

.c8.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,43%);
}

.c8.fi-status-text .fi-icon {
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c1 {
  width: 290px;
}

.c1 .fi-label,
.c1 .fi-hint-text,
.c1 .fi-status-text {
  margin: 0;
}

.c1 .fi-dropdown_item-list {
  padding-top: 0;
}

.c1.fi-dropdown {
  display: inline-block;
}

.c1.fi-dropdown .fi-dropdown_label--visible {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-dropdown .fi-status-text {
  line-height: 1.1rem;
}

.c1.fi-dropdown .fi-status-text.fi-dropdown_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-dropdown .fi-dropdown_button {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  min-width: 245px;
  max-width: 100%;
  padding: 8px 16px;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  position: relative;
  display: inline-block;
  word-break: break-word;
  width: 100%;
  overflow-wrap: break-word;
  height: 40px;
  padding: 7px 38px 7px 7px;
  border-color: hsl(201,7%,58%);
  text-align: left;
  line-height: 1.5;
  background-color: hsl(0,0%,100%);
  box-shadow: 0 1px 2px 0 hsla(214,100%,24%,0.1) inset;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c1.fi-dropdown .fi-dropdown_button:focus-visible {
  outline: none;
}

.c1.fi-dropdown .fi-dropdown_button:before {
  content: '';
  position: absolute;
  top: 50%;
  right: 16px;
  margin-top: -3px;
  border-style: solid;
  border-color: hsl(0,0%,13%) transparent transparent transparent;
  border-width: 6px 4px 0 4px;
}

.c1.fi-dropdown .fi-dropdown_button[aria-expanded='true']:before {
  border-color: transparent transparent hsl(0,0%,13%) transparent;
  border-width: 0 4px 6px 4px;
}

.c1.fi-dropdown .fi-dropdown_display-value {
  width: 100%;
  height: 100%;
  display: inline-block;
  line-height: 1.5;
  overflow: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover {
  color: hsl(0,0%,13%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-top: -1px;
  padding: 0;
  box-sizing: border-box;
  font-size: 100%;
  border: 0;
  background-color: hsl(0,0%,100%);
  border-color: hsl(201,7%,58%);
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0px 0px 2px 2px;
  max-height: 265px;
  overflow-y: auto;
  overflow-x: hidden;
}

.c1.fi-dropdown .fi-dropdown_popover:focus-within {
  outline: 0;
  box-shadow: none;
}

.c1.fi-dropdown--full-width {
  width: 100%;
}

.c1.fi-dropdown--open .fi-dropdown_button {
  border-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  padding-bottom: 8px;
}

.c1.fi-dropdown--error .fi-dropdown_button {
  border-color: hsl(3,59%,43%);
  border-width: 2px;
}

.c1.fi-dropdown--italicize .fi-dropdown_button {
  font-style: italic;
  color: hsl(201,7%,46%);
  opacity: 1;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper {
  cursor: not-allowed;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button {
  background-color: hsl(202,7%,97%);
  color: hsl(202,7%,67%);
  opacity: 1;
  pointer-events: none;
}

.c1.fi-dropdown--disabled .fi-dropdown_input-wrapper .fi-dropdown_button:before {
  border-color: hsl(202,7%,67%) transparent transparent transparent;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus {
  outline: 3px solid transparent;
  position: relative;
}

.c1.fi-dropdown:not(.fi-dropdown--open) .fi-dropdown_button:focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

<body>
  <div>
    <div
      class="c0 c1 dropdown-test fi-dropdown fi-dropdown--italicize"
      id="test-id"
    >
      <div
        class="c2 c3 fi-label"
      >
        <label
          class="c4 fi-visually-hidden"
          id="test-id-label"
        >
          Dropdown test
        </label>
      </div>
      <div
        class="c0 fi-dropdown_input-wrapper"
      >
        <button
          aria-controls="test-id-popover"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-displayValue test-id-label"
          class="c5 fi-dropdown_button"
          id="test-id_button"
          tabindex="0"
          type="button"
        >
          <span
            class="c6 fi-dropdown_display-value"
            id="test-id-displayValue"
          >
            Dropdown
          </span>
          <input
            class="c7"
            name="dropdown-test"
            tabindex="-1"
            type="hidden"
            value=""
          />
        </button>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c6 c8 fi-status-text"
        />
      </div>
    </div>
  </div>
</body>
`;
